fix: update logo svg to have higher contrast ratio (#1102)
* fix: update logo svg to have higher contrast ratio

* Revert "fix: update logo svg to have higher contrast ratio"

This reverts commit ebce3c03a66e3e7bbe1e47187427228f3dc0474a.

* fix: update blue colour used in the navigation bar

* fix: hover and focus style issue

--- a/src/assets/styles/components/_brand.scss
+++ b/src/assets/styles/components/_brand.scss
@@ -38,17 +38,17 @@
 
 .page--home {
     .brand {
-        color: var(--fl-linkColor, var(--blue-500));
+        color: var(--fl-linkColor, var(--idrc-blue));
         inline-size: rem(72);
 
         &:hover,
         &:focus {
-            background: var(--fl-linkColor, var(--blue-500));
+            background: var(--fl-linkColor, var(--idrc-blue));
             color: var(--fl-bgColor, var(--white));
         }
 
         &:active {
-            background: var(--fl-linkColor, color.adjust($blue-500, $alpha: -0.3));
+            background: var(--fl-linkColor, color.adjust($idrc-blue, $alpha: -0.3));
             color: var(--fl-bgColor);
         }
     }
